--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -23,4 +23,6 @@
     <string name="channel_remote_description">Уведомления с удалённого сервера</string>
     <string name="no_network">Нет сети</string>
     <string name="unknown_exception">Что-то пошло не так :(</string>
+    <string name="extended_fab_content_desc">New posts</string>
+    <string name="extended_fab_label">New posts</string>
 </resources>
