--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,10 @@
     <string name="channel_remote_name">Server notifications</string>
     <string name="channel_remote_description">Notifications from remote server</string>
     <string name="no_network">No web</string>
-    <string name="unknown_exception">Somethink whent wrong:(</string>
+    <string name="sign_in">Enter</string>
+    <string name="unknown_exception">Something went wrong:(</string>
     <string name="extended_fab_content_desc">New posts</string>
     <string name="extended_fab_label">New posts</string>
+    <string name="sign_up">Registration</string>
+    <string name="cancel">Cancel</string>
 </resources>
