--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -27,5 +27,6 @@
     <string name="extended_fab_label">New posts</string>
     <string name="sign_in">Войти</string>
     <string name="sign_up">Зарегистрироваться</string>
+    <string name="sign_out">Выйти</string>
     <string name="cancel">Отменить</string>
 </resources>
