--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="extended_fab_content_desc">New posts</string>
     <string name="extended_fab_label">New posts</string>
     <string name="sign_up">Registration</string>
+    <string name="sign_out">Quite</string>
     <string name="cancel">Cancel</string>
 </resources>
