--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="description_post_like">Like</string>
     <string name="description_post_share">Share</string>
     <string name="description_post_save">Save</string>
+    <string name="description_post_edit" translatable="false">Post edit</string>
     <string name="menu_remove">Remove</string>
     <string name="post_text">Post Text</string>
     <string name="menu_edit">Edit</string>
@@ -28,4 +29,6 @@
     <string name="sign_up">Registration</string>
     <string name="sign_out">Quite</string>
     <string name="cancel">Cancel</string>
+
+
 </resources>
